--- a/index.html
+++ b/index.html
@@ -1,118 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spinning Donut with Company Name</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: black;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-      font-family: monospace;
-    }
-    pre {
-      font-size: 10px; /* Dynamically adjusted for mobile readability */
-      line-height: 10px; /* Prevents overlapping */
-      white-space: pre; /* Maintains ASCII art format */
-      margin: 0;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Matrix-like animation using JavaScript and HTML">
+    <title>Matrix Effect</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            background-color: black;
+            color: #00FF00;
+            font-family: monospace;
+            height: 100vh;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        canvas {
+            display: block;
+        }
+    </style>
 </head>
 <body>
-  <pre id="donut"></pre>
-  <script>
-    const pre = document.getElementById("donut");
+    <canvas id="matrixCanvas"></canvas>
+    <script>
+        const canvas = document.getElementById('matrixCanvas');
+        const ctx = canvas.getContext('2d');
 
-    // Donut constants
-    const R1 = 1; // Inner radius
-    const R2 = 2; // Outer radius
-    const K1 = 15; // Distance multiplier (scaling factor)
-    const K2 = 5; // Depth offset
+        // Set canvas size
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
 
-    // Resolution and frames
-    const screenWidth = 60; // Number of characters across
-    const screenHeight = 30; // Number of rows
-    const thetaStep = 0.07; // Step size for theta
-    const phiStep = 0.02; // Step size for phi
-    let A = 0; // Rotation angle for X-axis
-    let B = 0; // Rotation angle for Z-axis
+        // Matrix effect settings
+        const columns = canvas.width / 20; // Number of columns
+        const drops = Array(columns).fill(0); // Array to store drop positions
 
-    const companyName = "NEXTGENWEBS"; // Replace with your company name
+        // Colors for the Matrix effect (greenish)
+        const hue = 120;
 
-    function drawDonut() {
-      // Clear screen buffer
-      const buffer = new Array(screenWidth * screenHeight).fill(" ");
-      const zBuffer = new Array(screenWidth * screenHeight).fill(0);
+        function draw() {
+            ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      for (let theta = 0; theta < 2 * Math.PI; theta += thetaStep) {
-        for (let phi = 0; phi < 2 * Math.PI; phi += phiStep) {
-          const sinTheta = Math.sin(theta);
-          const cosTheta = Math.cos(theta);
-          const sinPhi = Math.sin(phi);
-          const cosPhi = Math.cos(phi);
+            ctx.fillStyle = `hsl(${hue}, 100%, 50%)`;  // Set the color for text
+            ctx.font = '20px monospace';
 
-          // Torus coordinates in 3D
-          const circleX = R2 + R1 * cosTheta;
-          const circleY = R1 * sinTheta;
+            for (let i = 0; i < drops.length; i++) {
+                const text = Math.random() < 0.5 ? '.' : '#';  // Random character
+                ctx.fillText(text, i * 20, drops[i] * 20);
 
-          const x = circleX * (cosPhi * Math.cos(B) + sinPhi * Math.sin(A) * Math.sin(B)) -
-                    circleY * Math.cos(A) * Math.sin(B);
-          const y = circleX * (cosPhi * Math.sin(B) - sinPhi * Math.sin(A) * Math.cos(B)) +
-                    circleY * Math.cos(A) * Math.cos(B);
-          const z = K2 + Math.cos(A) * circleX * sinPhi + circleY * Math.sin(A);
+                // Reset drop position after reaching bottom of canvas
+                if (drops[i] * 20 > canvas.height && Math.random() > 0.975) {
+                    drops[i] = 0;
+                }
 
-          const ooz = 1 / z;
-
-          const xp = Math.floor(screenWidth / 2 + K1 * ooz * x);
-          const yp = Math.floor(screenHeight / 2 - K1 * ooz * y);
-
-          // Luminance calculation
-          const L = cosPhi * cosTheta * Math.sin(B) -
-                    Math.cos(A) * cosTheta * sinPhi -
-                    Math.sin(A) * sinTheta +
-                    Math.cos(B) * (Math.cos(A) * sinTheta - cosTheta * Math.sin(A) * sinPhi);
-
-          if (L > 0) {
-            const index = Math.floor(xp + yp * screenWidth);
-            if (index >= 0 && index < buffer.length && ooz > zBuffer[index]) {
-              zBuffer[index] = ooz;
-              const luminanceIndex = Math.floor(L * 8);
-              const luminanceChars = ".,-~:;=!*#$@"; // Higher luminance gets brighter chars
-
-              // Insert company name at specific indices
-              if (Math.floor(yp) === Math.floor(screenHeight / 2) && xp >= 20 && xp < 20 + companyName.length) {
-                buffer[index] = companyName[xp - 20];
-              } else {
-                buffer[index] = luminanceChars[luminanceIndex];
-              }
+                // Move drop down
+                drops[i]++;
             }
-          }
         }
-      }
 
-      // Render buffer to the screen
-      let output = "";
-      for (let i = 0; i < buffer.length; i++) {
-        output += buffer[i];
-        if ((i + 1) % screenWidth === 0) output += "\n";
-      }
-      pre.textContent = output;
-    }
+        // Animation loop
+        function update() {
+            draw();
+            requestAnimationFrame(update);
+        }
 
-    function animate() {
-      A += 0.04; // Rotation speed
-      B += 0.02; // Rotation speed
-      drawDonut();
-      requestAnimationFrame(animate);
-    }
-
-    animate();
-  </script>
+        // Start the animation
+        update();
+    </script>
 </body>
 </html>
