--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Matrix-like animation using JavaScript and HTML">
-    <title>Matrix Effect</title>
+    <meta name="description" content="Matrix-like animation with a 3D spinning donut effect">
+    <title>Matrix Effect with Spinning Donut</title>
     <style>
         * {
             margin: 0;
@@ -17,11 +17,11 @@
             font-family: monospace;
             height: 100vh;
             overflow: hidden;
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 0;
-            padding: 0;
         }
         canvas {
             display: block;
@@ -45,34 +45,83 @@
         // Matrix character set
         const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#$%^&*()_+-=[]{}|;:,.<>?/~";
 
-        // Function to draw matrix effect
-        function draw() {
-            // Clear screen with slight transparency
+        // Spinning donut effect settings
+        const R1 = 10, R2 = 20, K2 = 200, K1 = canvas.height * K2 * 3 / (8 * (R1 + R2));
+        const thetaSpacing = 10, phiSpacing = 3;
+        let A = 0, B = 0;  // Rotation angles
+
+        // Draw the matrix effect
+        function drawMatrix() {
             ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
             ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-            // Set glowing green color
-            ctx.fillStyle = 'rgba(0, 255, 0, 0.9)';  // Bright green with some transparency
+            // Set glowing green color for matrix characters
+            ctx.fillStyle = 'rgba(0, 255, 0, 0.9)';
             ctx.font = '20px monospace';
 
-            // Loop through each drop in the matrix
             for (let i = 0; i < drops.length; i++) {
-                const text = chars[Math.floor(Math.random() * chars.length)];  // Random character
+                const text = chars[Math.floor(Math.random() * chars.length)];
                 ctx.fillText(text, i * 20, drops[i] * 20);
 
-                // Reset drop position after it moves past the screen height
                 if (drops[i] * 20 > canvas.height && Math.random() > 0.975) {
                     drops[i] = 0;
                 }
 
-                // Move drop down
                 drops[i]++;
             }
         }
 
-        // Animation loop to update the matrix effect
+        // Draw the spinning donut (3D torus)
+        function drawDonut() {
+            const output = [' '] * (canvas.width * canvas.height / 400); // Array to store donut's pixels
+            const zbuffer = Array(output.length).fill(0);
+
+            for (let theta = 0; theta < 628; theta += thetaSpacing) {
+                for (let phi = 0; phi < 628; phi += phiSpacing) {
+                    const cosA = Math.cos(A), sinA = Math.sin(A);
+                    const cosB = Math.cos(B), sinB = Math.sin(B);
+                    const costheta = Math.cos(theta), sintheta = Math.sin(theta);
+                    const cosphi = Math.cos(phi), sinphi = Math.sin(phi);
+
+                    // 3D coordinates of torus
+                    const circlex = R2 + R1 * costheta;
+                    const circley = R1 * sintheta;
+                    const x = circlex * (cosB * cosphi + sinA * sinB * sinphi) - circley * cosA * sinB;
+                    const y = circlex * (sinB * cosphi - sinA * cosB * sinphi) + circley * cosA * cosB;
+                    const z = K2 + cosA * circlex * sinphi + circley * sinA;
+                    const ooz = 1 / z;
+
+                    const xp = Math.floor(canvas.width / 2 + K1 * ooz * x);
+                    const yp = Math.floor(canvas.height / 2 - K1 * ooz * y);
+
+                    const position = xp + canvas.width * yp;
+
+                    const L = cosphi * costheta * sinB - cosA * costheta * sinphi - sinA * sintheta + cosB * (cosA * sintheta - costheta * sinA * sinphi);
+
+                    if (ooz > zbuffer[position]) {
+                        zbuffer[position] = ooz;
+                        const luminanceIndex = Math.floor(L * 8);
+                        output[position] = luminanceIndex > 0 ? chars[luminanceIndex] : ' ';
+                    }
+                }
+            }
+
+            let k = 0;
+            for (let i = 0; i < canvas.height; i++) {
+                for (let j = 0; j < canvas.width; j++) {
+                    const text = output[k++];
+                    ctx.fillStyle = 'rgba(0, 255, 0, 0.9)';
+                    ctx.fillText(text, j * 20, i * 20);
+                }
+            }
+        }
+
+        // Animation loop to update the matrix and donut effects
         function update() {
-            draw();
+            drawMatrix();
+            drawDonut();
+            A += 0.1;
+            B += 0.03;
             requestAnimationFrame(update);
         }
 
