--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
         canvas {
             display: block;
         }
+        #overlayText {
+            position: absolute;
+            color: rgba(0, 255, 0, 1);
+            font-size: 40px;
+            font-family: monospace;
+            z-index: 2;
+            text-align: center;
+            user-select: none;
+        }
     </style>
 </head>
 <body>
     <canvas id="matrixCanvas"></canvas>
+    <div id="overlayText">Welcome to the Matrix</div>
     <script>
         const canvas = document.getElementById('matrixCanvas');
         const ctx = canvas.getContext('2d');
