--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <canvas id="matrixCanvas"></canvas>
-    <div id="overlayText">Welcome to the Matrix</div>
+    <div id="overlayText">Welcome to NextGenWebs</div>
     <script>
         const canvas = document.getElementById('matrixCanvas');
         const ctx = canvas.getContext('2d');
